--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .open span:nth-child(1) {margin-top: 10px;z-index: 19;}
 .open span:nth-child(2) {margin-top: 20px;z-index: 19;}
 .open span:nth-child(3) {margin-top: 30px;z-index: 19;}
-.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(152, 44, 255);border-radius: 50%;z-index: 23;overflow: hidden;}
+.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(152, 44, 255, 0.9);border-radius: 50%;z-index: 23;overflow: hidden;}
 .sub-menu li {display: block;float: right;clear: both;height: auto;margin-right: -160px;-webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);}
 .sub-menu li:first-child {margin-top: 190px;}
 .sub-menu li:nth-child(1) {-webkit-transition-delay: 0.05s;}
@@ -57,7 +57,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .oppenned span:nth-child(2) {overflow: visible;}
 .oppenned span:nth-child(1), .oppenned span:nth-child(3) {z-index: 100;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
 .oppenned span:nth-child(1) {-webkit-transform: rotate(45deg) translateY(12px) translateX(12px);transform: rotate(45deg) translateY(12px) translateX(12px);}
-.oppenned span:nth-child(2) {height: 600px;width: 580px;right: -400px;top: -170px;border-radius: 50%;background-color: rgba(152, 44, 255, 0.2);}
+.oppenned span:nth-child(2) {height: 600px;width: 580px;right: -400px;top: -170px;border-radius: 50%;background-color: rgba(152, 44, 255, 1);}
 .oppenned span:nth-child(3) {-webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);transform: rotate(-45deg) translateY(-3px) translateX(2px);}
 .oppenned li {margin-right: 400px;}
 .button {display: block;float: left;clear: both;padding: 20px 40px;background: #fff;border-radius: 3px;border: 2px solid #10a1ea;overflow: hidden;position: relative;}
