--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,14 @@ q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 /*RESET CSS ENDS*/
 
-/*Genearl Body CSS*/
+/*General Body CSS*/
 body {font-family: 'Roboto', sans-serif; background-color: #000;color: #fff;border: none !important;}
 body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper .about, .content_wrapper .schdl, .content_wrapper .speakers, .content_wrapper .workshops, .content_wrapper .competitions, .content_wrapper .extras, .content_wrapper .partners, .content_wrapper .venue_sec, .content_wrapper .contact{width: 100%; height: auto;border: none;display: block;}
 
+@font-face {
+    font-family: gothamBlack;
+    src: url(../fonts/gotham-black.ttf);
+}
 
 /*Header Navigation Css*/
 .main_header{float: left;border: 0;background: #000;padding: 20px 100px;position: fixed;top: 0;z-index: 30;border: none;}
@@ -78,7 +82,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .home .options .date, .home .options .venue, .home .options .schedule{display: block;float: left;width: 33.33%; height: auto;}
 .home .options .date a, .home .options .venue a, .home .options .schedule a{display: block;float: left;width: 100%;height: auto;color: #fff;cursor: pointer;}
 .home .options .date a i, .home .options .venue a i, .home .options .schedule a i{font-size: 4em;width: 100%;margin-bottom: 25px;color: #982cff;}
-.home .options .date a span, .home .options .venue a span, .home .options .schedule a span{width: 100%;text-align: center;font-size: 1.2em;font-weight: 700;}
+.home .options .date a span, .home .options .venue a span, .home .options .schedule a span{width: 100%;text-align: center;font-size: 1.2em;font-family: 'gotham-black', sans-serif; font-weight: 700;}
 #home .shadow-overlay {position: absolute;top: 0;left: 0;width: 100%;height: 100%;opacity: .9;
   background: -moz-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* FF3.6-15 */
   background: -webkit-linear-gradient(left, black 0%, black 20%, transparent 100%);  /* Chrome10-25,Safari5.1-6 */
