--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,14 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .content_wrapper{margin-top: 80px;}
 
 /*Menu elements start here*/
+
 .open {position: relative;top: 0;right: 0;width: 100%;height: auto;display: block;cursor: pointer;z-index: 20;-webkit-transition: opacity 0.2s linear;transition: opacity 0.2s linear;}
 .open:hover {opacity: 0.8;}
 .open span {display: block;float: left;clear: both;height: 2px;width: 30px;border-radius: 40px;background-color: #fff;position: absolute;right: -5px;top: 3px;z-index: 19;overflow: hidden;-webkit-transition: all 0.4s ease;transition: all 0.4s ease;}
 .open span:nth-child(1) {margin-top: 10px;z-index: 19;}
 .open span:nth-child(2) {margin-top: 20px;z-index: 19;}
 .open span:nth-child(3) {margin-top: 30px;z-index: 19;}
-.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(152, 44, 255,0.9);border-radius: 50%;z-index: 23;overflow: hidden;}
+.sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(152, 44, 255,0.9);border-radius: 1%;z-index: 23;overflow: hidden;}
 .sub-menu li {display: block;float: right;clear: both;height: auto;margin-right: -160px;-webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);}
 .sub-menu li:first-child {margin-top: 190px;}
 .sub-menu li:nth-child(1) {-webkit-transition-delay: 0.05s;}
@@ -57,11 +58,11 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .sub-menu li:nth-child(9) {-webkit-transition-delay: 0.45s;}
 .sub-menu li:nth-child(10) {-webkit-transition-delay: 0.50s;}
 .sub-menu li a {color: #fff;font-family: 'Lato', Arial, Helvetica, sans-serif;font-size: 16px;width: 100%;display: block;float: left;line-height: 40px;}
-.oppenned .sub-menu {opacity: 1;height: 650px;width: 600px;}
+.oppenned .sub-menu {opacity: 1;height: 880px;width: 600px;}
 .oppenned span:nth-child(2) {overflow: visible;}
 .oppenned span:nth-child(1), .oppenned span:nth-child(3) {z-index: 100;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
 .oppenned span:nth-child(1) {-webkit-transform: rotate(45deg) translateY(12px) translateX(12px);transform: rotate(45deg) translateY(12px) translateX(12px);}
-.oppenned span:nth-child(2) {height: 600px;width: 580px;right: -400px;top: -170px;border-radius: 50%;background-color: rgba(152, 44, 255, 1);}
+.oppenned span:nth-child(2) {height: 880px;width: 580px;right: -400px;top: -170px;border-radius: 2%; transform:rotate(-15deg); background-color: rgba(152, 44, 255, 1);}
 .oppenned span:nth-child(3) {-webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);transform: rotate(-45deg) translateY(-3px) translateX(2px);}
 .oppenned li {margin-right: 400px;}
 .button {display: block;float: left;clear: both;padding: 20px 40px;background: #fff;border-radius: 3px;border: 2px solid #10a1ea;overflow: hidden;position: relative;}
@@ -94,6 +95,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 #home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .50;background: url('../img/star_tiny.png') no-repeat center/ cover;z-index: 1 !important;}
 #home.home-particles .shadow-overlay {display: none;}
 #home.home-slides {height: 100% !important;}
+#menu_content {rotate:transform(10deg); float: right;}
 
 @-webkit-keyframes vertical {
   0%, 60%, 80%, 100% {-webkit-transform: translateY(0);}
