--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 
 /*Header Navigation Css*/
-.main_header{float: left;border: 0;background: #000;padding: 20px 100px;position: fixed;top: 0;z-index: 30;border: none;}
+.main_header{float: left;border: 0;background: rgba(0, 0, 0, .5);padding: 20px 100px;position: fixed;top: 0;z-index: 30;border: none;}
 .main_header .nid_logo{display:block;float:left;margin:0;width:40%;height:40px;z-index:20;background: url(../img/NID_white_logo.png) no-repeat left/auto 35px;}
 .main_header .main_menu{display:block;float:left;margin:0;width:60%;height:40px;z-index:20;text-align: right;}
 .main_header .main_menu p{display: block;float: left;height: 100%;width: 100%;vertical-align: bottom;margin: 10px 0;}
@@ -46,7 +46,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .open span:nth-child(3) {margin-top: 30px;z-index: 19;}
 .sub-menu {-webkit-transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);height: 0;width: 0;right: 0;top: 20px;position: absolute;background-color: rgba(152, 44, 255,0.9);border-radius: 1%;z-index: 23;overflow: hidden;}
 .sub-menu li {display: block;float: right;clear: both;height: auto;margin-right: -160px;-webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);}
-.sub-menu li:first-child {margin-top: 190px;}
+.sub-menu li:first-child {margin-top: 220px;}
 .sub-menu li:nth-child(1) {-webkit-transition-delay: 0.05s;}
 .sub-menu li:nth-child(2) {-webkit-transition-delay: 0.10s;}
 .sub-menu li:nth-child(3) {-webkit-transition-delay: 0.15s;}
@@ -64,7 +64,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .oppenned span:nth-child(1) {-webkit-transform: rotate(45deg) translateY(12px) translateX(12px);transform: rotate(45deg) translateY(12px) translateX(12px);}
 .oppenned span:nth-child(2) {height: 880px;width: 580px;right: -400px;top: -170px;border-radius: 2%; transform:rotate(-15deg); background-color: rgba(152, 44, 255, 1);}
 .oppenned span:nth-child(3) {-webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);transform: rotate(-45deg) translateY(-3px) translateX(2px);}
-.oppenned li {margin-right: 400px;}
+.oppenned li {margin-right: 350px;}
 .button {display: block;float: left;clear: both;padding: 20px 40px;background: #fff;border-radius: 3px;border: 2px solid #10a1ea;overflow: hidden;position: relative;}
 .button:after {-webkit-transition: -webkit-transform 0.3s ease;transition: -webkit-transform 0.3s ease;transition: transform 0.3s ease;transition: transform 0.3s ease, -webkit-transform 0.3s ease;content: "";position: absolute;height: 200px;width: 400px;-webkit-transform: rotate(45deg) translateX(-540px) translateY(-100px);transform: rotate(45deg) translateX(-540px) translateY(-100px);background: #10a1ea;z-index: 20;}
 .button:before {-webkit-transition: -webkit-transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: -webkit-transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55), -webkit-transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);content: attr(title);position: absolute;top: 0;left: 0;width: 100%;height: 100%;color: #fff;z-index: 19;text-align: center;padding: 20px 40px;-webkit-transform: translateY(200px);transform: translateY(200px);}
@@ -117,23 +117,51 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .home #venue {background: url("../img/icons/location.svg") no-repeat}
 .home #schedule {background: url("../img/icons/schedule.svg") no-repeat}*/
 .home .options img {width: 50px;}
+.home .options a div, .home .options a span{display: block;float: left;width: 100%;height: auto;}
+.home .options a span{margin-top: 20px;}
+
+
+
+
+.content_wrapper .section_body{display: block;float: left;width: 100%;height: 3600px;background:url(../img/Final_backgrounds/Webshite-Background-Sheet.jpg) no-repeat center top/100%;}
+
 /*About Section*/
-.content_wrapper .about{display: block;float: left;background:url(../img/bg/backgrounds-01.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(152,44,255,0.1); height: auto;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .about .section_icon{display: block;float: left;width: 15%;height: auto;}
+.content_wrapper .about{display: block;float: left; height: 20%;width: 100%;}
+.content_wrapper .about .about_cutout{display: block;float: left;background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center/100%; width: 62%;height: 100%;position: relative;left: 0; padding: 200px 70px 70px;}
+.content_wrapper .about .about_cutout h2{display:block;float: left;font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 20px;}
+.content_wrapper .about .about_cutout p{display:block;float: left;font-size: 1em;line-height: 1.6em;color: #999;width: 500px;margin-bottom: 20px;text-align: justify;}
+
+/*.content_wrapper .about .section_icon{display: block;float: left;width: 62%;height: auto;}
 .content_wrapper .about .cnt{display: block;float: left;width: 37%;height: auto;}
 .content_wrapper .about .cnt p{display:block;float: left;font-size: 0.8em;line-height: 1.8em;color: #999;padding: 30px 0 0 0;}
 .content_wrapper .about .cnt h2{display:block;float: left;font-size: 1.4em;}
-.content_wrapper .about .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
+.content_wrapper .about .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
 /*Schedule Section css*/
-.content_wrapper .schdl{display: block;float: left;background:url(../img/bg/backgrounds-02.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(23,255,221,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
+.content_wrapper .schdl{display: block;float: left;height: 40%;width: 100%;}
+.content_wrapper .schdl .schdl_cutout1{display: block;float: right;background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%; width: 38%;height: 100%;position: relative;top: 0;right: 0;padding: 315px 73px 0 160px;}
+.content_wrapper .schdl .schdl_cutout2{display: block;float: left;background:url(../img/Final_backgrounds/Schedule-Day2-Holder.png) no-repeat center bottom/100%; width: 67%;height: 100%;position: relative;left: 0;top: -1440px;}
+.content_wrapper .schdl .schdl_cutout1 h2{display:block;float: left;font-size: 3em;color: #FFFFFF;width: 100%;text-align: right;}
+
+/*
 .content_wrapper .schdl .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .schdl .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
+.content_wrapper .schdl .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
 /*Speakers Section css*/
-.content_wrapper .speakers{display: block;float: left;background:url(../img/bg/backgrounds-03.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(255,0,195,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
-.content_wrapper .speakers .section_icon{display: block;float: left;width: 15%;height: auto;}
-.content_wrapper .speakers .section_icon .ico{display: block;float: left;width: 120px;height: auto;}
+.content_wrapper .speakers{display: block;float: left;height: 40%;width: 100%;}
+.content_wrapper .speakers .speaker_cutout{display: block;float: left;background:url(../img/Final_backgrounds/dTalks-Holder.png) no-repeat center/100%; width: 47%;height: 100%;position: relative;left: 0;padding: 380px 0 0 170px;}
+.content_wrapper .speakers .speaker_cutout h2{display:block;float: left;font-size: 3em;color: #00FFE2;width: 100%;}
+.content_wrapper .speakers .first_row, .content_wrapper .speakers .second_row{display: block;float: right;padding-top: 200px;}
+.content_wrapper .speakers .first_row{width: 40%;}
+.content_wrapper .speakers .second_row{width: 58%;position: relative;top: -845px;}
+.content_wrapper .speakers .first_row .speaker{display: block;float: left;width: 200px;text-align: center;margin:0 30px 0 0;}
+.content_wrapper .speakers .second_row .speaker{display: block;float: left;width: 200px;text-align: center;margin:0 30px 0 0;}
+.content_wrapper .speakers .speaker img, .content_wrapper .speakers .speaker span.des{display:block;width:100%;height:auto;margin-bottom: 20px;}
+.content_wrapper .speakers .speaker span.des, .content_wrapper .speakers .speaker h4{color: #00FFE2;}
+.content_wrapper .speakers .speaker p{display: block;width: 100%;text-align: justify;font-size: 0.8em;line-height: 1.4em;}
+
+/*.content_wrapper .speakers .section_icon{display: block;float: left;width: 15%;height: auto;}
+.content_wrapper .speakers .section_icon .ico{display: block;float: left;width: 100%;height: 100%;}*/
 
 /*Workshops css*/
 .content_wrapper .workshops{display: block;float: left;background:url(../img/bg/backgrounds-05.jpg) no-repeat center/cover; box-shadow: inset 0 0 0 1000px rgba(152,44,255,0.1); height: 700px;width: 100%;padding: 100px 100px 50px;}
@@ -257,6 +285,13 @@ body a:hover{text-decoration: none;}
 
 
 /******************* Responsive css Begins ******************/
+
+@media only screen and (min-width: 1281px) and (max-width: 1920px){
+.home .logo_container {min-height: 600px;}
+.content_wrapper .section_body{height: 5400px;}
+.content_wrapper .schdl .schdl_cutout2{top: -2160px;}
+
+}
 @media only screen and (max-width:340px) {
   
   
