--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 /*Menu elements start here*/
 
-.open {position: relative;top: 0;right: 0;width: 100%;height: auto;display: block;cursor: pointer;z-index: 20;-webkit-transition: opacity 0.2s linear;transition: opacity 0.2s linear;}
+.open {position: fixed;top: 12px;right: 40px;width: 50px;height: 50px;display: block;cursor: pointer;z-index: 20;-webkit-transition: opacity 0.2s linear;transition: opacity 0.2s linear;}
 .open:hover {opacity: 0.8;}
 .open span {display: block;float: left;clear: both;height: 2px;width: 30px;border-radius: 40px;background-color: #fff;position: absolute;right: -5px;top: 3px;z-index: 19;overflow: hidden;-webkit-transition: all 0.4s ease;transition: all 0.4s ease;}
 .open span:nth-child(1) {margin-top: 10px;z-index: 19;}
@@ -57,12 +57,12 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .sub-menu li:nth-child(8) {-webkit-transition-delay: 0.40s;}
 .sub-menu li:nth-child(9) {-webkit-transition-delay: 0.45s;}
 .sub-menu li:nth-child(10) {-webkit-transition-delay: 0.50s;}
-.sub-menu li a {color: #fff;font-family: 'Lato', Arial, Helvetica, sans-serif;font-size: 16px;width: 100%;display: block;float: left;line-height: 40px;}
-.oppenned .sub-menu {opacity: 1;height: 880px;width: 600px;}
+.sub-menu li a {color: #fff;font-family: 'Lato', Arial, Helvetica, sans-serif;font-size: 16px;width: 100%;display: block;float: left;line-height: 55px;}
+.oppenned .sub-menu {opacity: 1;height: 1000px;width: 600px;}
 .oppenned span:nth-child(2) {overflow: visible;}
 .oppenned span:nth-child(1), .oppenned span:nth-child(3) {z-index: 100;-webkit-transform: rotate(45deg);transform: rotate(45deg);}
 .oppenned span:nth-child(1) {-webkit-transform: rotate(45deg) translateY(12px) translateX(12px);transform: rotate(45deg) translateY(12px) translateX(12px);}
-.oppenned span:nth-child(2) {height: 880px;width: 580px;right: -400px;top: -170px;border-radius: 2%; transform:rotate(-15deg); background-color: rgba(152, 44, 255, 1);}
+.oppenned span:nth-child(2) {height: 1000px;width: 580px;right: -400px;top: -170px;border-radius: 2%; transform:rotate(-15deg); background-color: rgba(152, 44, 255, 1);}
 .oppenned span:nth-child(3) {-webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);transform: rotate(-45deg) translateY(-3px) translateX(2px);}
 .oppenned li {margin-right: 350px;}
 .button {display: block;float: left;clear: both;padding: 20px 40px;background: #fff;border-radius: 3px;border: 2px solid #10a1ea;overflow: hidden;position: relative;}
@@ -95,7 +95,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 #home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .50;background: url('../img/star_tiny.png') no-repeat center/ cover;z-index: 1 !important;}
 #home.home-particles .shadow-overlay {display: none;}
 #home.home-slides {height: 100% !important;}
-#menu_content {transform:rotate(15deg); float: right;}
+#menu_content {transform:rotate(15deg); float: right; margin-right: 15px}
 
 @-webkit-keyframes vertical {
   0%, 60%, 80%, 100% {-webkit-transform: translateY(0);}
