--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 /*About Section*/
 .content_wrapper .about{display: block;float: left; height: 20%;width: 100%;}
-.content_wrapper .about .about_cutout{display: block;float: left;background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center/100%; width: 62%;height: 100%;position: relative;left: 0; padding: 200px 70px 70px;}
+.content_wrapper .about .about_cutout{display: block;float: left;background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center 0/100%; width: 62%;height: 100%;position: relative;left: 0; padding: 200px 70px 70px;}
 .content_wrapper .about .about_cutout h2{display:block;float: left;font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 20px;font-family: 'Gotham';}
 .content_wrapper .about .about_cutout p{display:block;float: left;font-size: 1em;line-height: 1.6em;color: #999;width: 500px;margin-bottom: 20px;text-align: justify;}
 
@@ -311,10 +311,47 @@ body a:hover{text-decoration: none;}
 
 /******************* Responsive css Begins ******************/
 
-@media only screen and (min-width: 1281px) and (max-width: 1920px){
+@media only screen and (width: 1920px){
 .home .logo_container {min-height: 600px;}
 .content_wrapper .section_body{height: 5400px;}
 .content_wrapper .schdl .schdl_cutout2{top: -2160px;}
+.content_wrapper .about .about_cutout {padding: 300px 100px 70px;}
+.content_wrapper .about .about_cutout p {width: 800px;}
+.content_wrapper .about .about_cutout p {font-size: 1.8em;}
+.content_wrapper .schdl .download_schedule {width: 400px;margin-right: 100px;}
+.content_wrapper .about .about_cutout h2 {font-size: 4em;margin-bottom: 30px;}
+.content_wrapper .schdl .schdl_cutout1{padding: 490px 100px 0 160px;}
+.content_wrapper .schdl .schdl_cutout1 h2 {font-size: 4em;}
+.content_wrapper .schdl .day1 {margin: 150px 0 0 100px;}
+.content_wrapper .schdl .day1 h3 ,.content_wrapper .schdl .schdl_cutout2 .day2 h3{font-size: 4em;margin-bottom: 50px;}
+.content_wrapper .schdl .day1 .schdl_cnt, .content_wrapper .schdl .day2 .schdl_cnt {margin-bottom: 50px;}
+.content_wrapper .schdl .day1 .sub_hd, .content_wrapper .schdl .day2 .sub_hd {margin-bottom: 30px;}
+.content_wrapper .schdl .day1 .event_ls, .content_wrapper .schdl .day2 .event_ls {font-size: 1.6em;}
+.content_wrapper .schdl .day1 .event_ls .time, .content_wrapper .schdl .day2 .event_ls .time {margin-right: 30px;}
+.content_wrapper .schdl .day1 .event_ls .high, .content_wrapper .schdl .day2 .event_ls .high {margin-right: 20px;}
+.content_wrapper .schdl .event_ls .lab {width: 215px;}
+.content_wrapper .schdl .event_ls .tlk {width: 155px;}
+.content_wrapper .schdl .event_ls .evt {width: 252px;}
+.content_wrapper .schdl .sub_hd .left {font-size: 3em;}
+.content_wrapper .schdl .sub_hd .sep {font-size: 3em;padding: 0 20px;}
+.content_wrapper .schdl .sub_hd .right {font-size: 1.6em;}
+.content_wrapper .schdl .schdl_cutout2 .day2 {top: 1040px;margin: 150px 0 0 100px;}
+.content_wrapper .schdl .download_schedule a {font-size: 2em;}
+.content_wrapper .schdl .download_schedule a {padding: 20px 30px;}
+.content_wrapper .schdl .download_schedule {top: -290px;}
+.content_wrapper .speakers .speaker_cutout {padding: 580px 0 0 250px;}
+.content_wrapper .speakers .speaker_cutout h2 {font-size: 4em;}
+.content_wrapper .speakers .first_row, .content_wrapper .speakers .second_row {top: -2180px;}
+.content_wrapper .speakers .first_row > div:nth-child(1) {margin-left: 375px;}
+.content_wrapper .speakers .first_row .speaker {width: 300px;margin: 0 80px 0 0;}
+.content_wrapper .speakers .speaker h4 {font-size: 2em;margin-bottom: 10px;}
+.content_wrapper .speakers .speaker span.des {font-size: 1.8em;}
+.content_wrapper .speakers .speaker p {font-size: 1.5em;line-height: 1.3em;}
+.content_wrapper .speakers .speaker img, .content_wrapper .speakers .speaker span.des {margin-bottom: 40px;}
+.content_wrapper .speakers .first_row {width: 60%;}
+.content_wrapper .speakers .first_row > div:nth-child(3), .content_wrapper .speakers .first_row > div:nth-child(4), .content_wrapper .speakers .first_row > div:nth-child(5) {margin-top: 160px;}
+
+
 
 }
 @media only screen and (max-width:340px) {
