--- a/css/style-old1.css
+++ b/css/style-old1.css
@@ -130,18 +130,13 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 
 
-.content_wrapper .section_body{display: block;float: left;width: 100%;height: 3600px;}
+.content_wrapper .section_body{display: block;float: left;width: 100%;height: 3600px;background:url(../img/Final_backgrounds/Webshite-Background-Sheet.jpg) no-repeat center top/100%;}
 
 /*About Section*/
-.content_wrapper .about{display: block; height: 20%;width: 100%;}
+.content_wrapper .about{display: block;float: left; height: 20%;width: 100%;}
 .content_wrapper .about .about_cutout{display: block;float: left;/*background:url(../img/Final_backgrounds/About-Holder.png) no-repeat center 0/100%;*/ width: 62%;height: 100%;position: relative;left: 0; padding: 200px 70px 70px;}
 .content_wrapper .about .about_cutout h2{display:block;float: left;font-size: 3em;color: #FF00C3;width: 100%;margin-bottom: 20px;font-family: 'Gotham';}
 .content_wrapper .about .about_cutout p{display:block;/*float: left;*/font-size: 1em;line-height: 1.6em;color: #999;width: 500px;margin-bottom: 20px;text-align: justify;}
-
-.content_wrapper .about {
-  background:url(../img/Final_backgrounds/BG-About.jpg) no-repeat center top/100%;
-  background-size: cover;
-}
 
 .content_wrapper .about .about_cutout {
   position: relative;
@@ -177,33 +172,19 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 .content_wrapper .about .about-img-2 {
   position: absolute;
   right: 0;
-  top: 719px;
+  top: 720px;
   width: 40%;
 }
 
 
 /*Schedule Section css*/
-.content_wrapper .schdl{display: block;width: 100%;overflow: hidden;}
-
-.content_wrapper .schdl {
-  background:url(../img/Final_backgrounds/BG-Schedule.jpg) no-repeat center top/100%;
-  background-size: cover; 
-}
-
-.content_wrapper .schdl .schdl_cutout1{display: block;float: right;/*background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%;*/ width: 38%;position: relative;top: 0;right: 0;padding: 315px 73px 0 160px;}
-.content_wrapper .schdl .schdl_cutout2{display: block;position: relative;left: 0;}
-
-.cutout-2-img {
-  position: absolute;
-  top: 0;
-  left: -380px;
-  z-index: -1;
-}
-
+.content_wrapper .schdl{display: block;float: left;height: 40%;width: 100%;}
+.content_wrapper .schdl .schdl_cutout1{display: block;float: right;/*background:url(../img/Final_backgrounds/Schedule-Holder.png) no-repeat center top/100%;*/ width: 38%;height: 100%;position: relative;top: 0;right: 0;padding: 315px 73px 0 160px;}
+.content_wrapper .schdl .schdl_cutout2{display: block;float: left;background:url(../img/Final_backgrounds/Schedule-Day2-Holder.png) no-repeat center bottom/100%; width: 67%;height: 100%;position: relative;left: 0;top: -1440px;}
 .content_wrapper .schdl .schdl_cutout1 h2{display:block;float: left;font-size: 3em;color: #FFFFFF;width: 100%;text-align: right;font-family: 'Gotham';}
-.content_wrapper .schdl .day1{display: block;padding: 100px 0 220px 70px;}
-.content_wrapper .schdl .day1 h3{display: block;font-family: 'Gotham';font-size:3em;color: #FF00C3;width: 100%;margin-bottom: 40px;}
-.content_wrapper .schdl .schdl_cutout2 .day2{display: block;width: 100%;position: relative;color: #141414;padding: 120px 0 60px 70px;}
+.content_wrapper .schdl .day1{display: block;float: left;margin: 100px 0 0 70px;}
+.content_wrapper .schdl .day1 h3{display: block;float: left;font-family: 'Gotham';font-size:3em;color: #FF00C3;width: 100%;margin-bottom: 40px;}
+.content_wrapper .schdl .schdl_cutout2 .day2{display: block;float: left;position: relative;top: 720px;color: #141414;margin: 100px 0 0 70px;}
 .content_wrapper .schdl .schdl_cutout2 .day2 h3{display: block;float: left;font-family: 'Gotham';font-size:3em;color: #141414;width: 100%;margin-bottom: 40px;}
 .content_wrapper .schdl .download_schedule{display: block;float: right;position: relative;top: -170px;width: 280px;text-align: center;margin-right: 70px;}
 .content_wrapper .schdl .download_schedule a{font-size: 1.4em;display: block;float: right;width: 100%;padding: 10px;border: 1px solid;border-style: dashed;line-height: 1.4em;border-radius: 8px;color:rgba(255,255,255, 0.7);cursor: pointer;}
@@ -231,15 +212,7 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 /*Speakers Section css*/
 .content_wrapper .speakers{display: block;float: left;height: 40%;width: 100%;}
-.content_wrapper .speakers .speaker_cutout{display: block;float: left; width: 47%;height: 100%;position: relative;left: 0;padding: 380px 0 0 170px;}
-
-.speaker-cutout-img {
-  position: absolute;
-  top: 0;
-  left: -277px;
-  z-index: -1;
-}
-
+.content_wrapper .speakers .speaker_cutout{display: block;float: left;background:url(../img/Final_backgrounds/dTalks-Holder.png) no-repeat center/100%; width: 47%;height: 100%;position: relative;left: 0;padding: 380px 0 0 170px;}
 .content_wrapper .speakers .speaker_cutout h2{display:block;float: left;font-size: 3em;color: #00FFE2;width: 100%;font-family: 'Gotham';}
 .content_wrapper .speakers .first_row, .content_wrapper .speakers .second_row{display: block;float: right;margin-top: 200px;position: relative;top: -1440px;}
 .content_wrapper .speakers .first_row{width: 60%;}
