--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,15 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 }
 
 /*Header Navigation Css*/
-.main_header{border: 0;background: rgba(0, 0, 0, .5);padding: 20px 100px;position: fixed;top: 0;z-index: 1200;border: none;}
-.main_header .nid_logo{display:block;float:left;margin:0;width:40%;height:40px;z-index:20;background: url(../img/NID_white_logo.png) no-repeat left/auto 35px;}
-.main_header .main_menu{display:block;float:left;margin:0;width:60%;height:40px;z-index:20;text-align: right;padding-top: 10px;}
+.main_header{border: 0;background: rgba(0, 0, 0, .5);padding: 14px 100px 10px;position: fixed;top: 0;z-index: 1200;border: none;}
+.main_header .nid_logo{display:block;float:left;margin:0;width:40%;height:40px;z-index:20;}
+
+.nid-logo-img {
+  height: 30px;
+  display: inline-block;
+}
+
+.main_header .main_menu{display:block;float:right;margin:0;width:60%;height:40px;z-index:20;text-align: right;padding-top: 10px;}
 .main_header .main_menu p{display: block;float: left;height: 100%;width: 100%;vertical-align: bottom;margin: 10px 0;}
 
 /*Content Wrapper css*/
@@ -78,9 +84,29 @@ body, header, footer, .content_wrapper, .content_wrapper .home, .content_wrapper
 
 /*Fixed menu CSS*/
 #menu li {
-display: inline;
-padding: 5px;
+  display: inline;
+  padding: 5px;
+  position: relative;
 }
+
+#menu li a:after {
+  content: '';
+  position: absolute;
+  bottom: -18px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 3px;
+  background-color: #17FFDD;
+  opacity: 0;
+  transition: 0.2s ease;
+}
+
+#menu li.current a:after {
+  opacity: 0.8;
+  transition: 0.2s ease;
+  }
+
 #menu a {
     text-decoration: none;
     color: #ffffff;
